tests/negative/regression/r10.orng
// r10.orng:6:15: error: not an l-value
//     let a = &2
//              ^
// 
fn main () -> () {
    let a = &2
    a
}